20210719 2884번 문제푸는 중

--- a/문제풀이/문제풀이.vcxproj.filters
+++ b/문제풀이/문제풀이.vcxproj.filters
@@ -21,8 +21,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2753.cpp">
-      <Filter>소스 파일\if문</Filter>
+    <ClCompile Include="2884.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
